tests/NormalTests/paczka1/fuzzy1/92945825.err
Error in line 1: 2y7U S371 85,3
Error in line 3: O6ax09ChJm S371 53,9
Error in line 4: 2y7U A335 82,6
Error in line 12: 2y7U A140 12,4
Error in line 31: A335 A335 70,3
